WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249073
[SIMD] Intel support for load and store operations and fix operation shuffle
https://bugs.webkit.org/show_bug.cgi?id=249073
Summary
[SIMD] Intel support for load and store operations and fix operation shuffle
Yijia Huang
Reported
2022-12-10 10:06:10 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-10 10:06:45 PST
<
rdar://problem/103214919
>
Yijia Huang
Comment 2
2022-12-10 10:17:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7055
Yijia Huang
Comment 3
2022-12-10 10:20:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7440
EWS
Comment 4
2022-12-13 16:35:21 PST
Committed
257818@main
(0def43da76cf): <
https://commits.webkit.org/257818@main
> Reviewed commits have been landed. Closing PR #7440 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug