[SIMD] Intel fix operation shuffle https://bugs.webkit.org/show_bug.cgi?id=249073 rdar://problem/10321491

Reviewed by NOBODY (OOPS!).

Fix WASM SIMD operation i8x16.shuffle.

* Source/JavaScriptCore/wasm/WasmAirIRGenerator.cpp:
(JSC::Wasm::AirIRGenerator::addSIMDShuffle):